// ==========================================
// PROYECTO: GymSync - Base de Datos Relacional
// ==========================================

// --- TABLAS DE USUARIOS (Estrategia Joined) ---

Table USUARIO {
  id_usuario int [pk, increment, note: 'Clave primaria autogenerada']
  nombre varchar(50) [not null]
  apellido varchar(50) [not null]
  ci_numero varchar(15) [unique, not null, note: 'Documento único']
  correo varchar(100) [unique, not null]
  contrasena_hash varchar(256) [not null]
  rol varchar(20) [not null, note: 'CHECK: ADMIN, ENTRENADOR, CLIENTE']
  fecha_registro datetime [not null, default: `now()`]
}

Table CLIENTE {
  id_cliente int [pk, ref: - USUARIO.id_usuario, note: 'PK/FK Hereda de USUARIO (1:1)']
  telefono varchar(20)
  contacto_emergencia varchar(20)
  estado_medico varchar(255)
}

Table ENTRENADOR {
  id_entrenador int [pk, ref: - USUARIO.id_usuario, note: 'PK/FK Hereda de USUARIO (1:1)']
  especialidad varchar(50) [not null]
  turno varchar(20) [not null, note: 'CHECK: Mañana, Tarde, Noche']
}


// --- TABLAS DE MEMBRESÍAS Y PAGOS ---

Table PLAN_MEMBRESIA {
  id_plan int [pk, increment]
  nombre_plan varchar(50) [unique, not null]
  precio decimal(10,2) [not null, note: 'CHECK: > 0']
  duracion_dias int [not null, note: 'CHECK: > 0']
}

Table MEMBRESIA_CLIENTE {
  id_membresia int [pk, increment]
  id_cliente int [not null, ref: > CLIENTE.id_cliente]
  id_plan int [not null, ref: > PLAN_MEMBRESIA.id_plan]
  fecha_inicio date [not null]
  fecha_vencimiento date [not null]
  estado varchar(15) [not null, note: 'CHECK: Activa, Vencida, Suspendida']
}

Table PAGO {
  id_pago int [pk, increment]
  id_cliente int [not null, ref: > CLIENTE.id_cliente]
  id_membresia int [not null, ref: > MEMBRESIA_CLIENTE.id_membresia]
  monto_pagado decimal(10,2) [not null, note: 'CHECK: > 0']
  fecha_pago datetime [not null, default: `now()`]
  metodo_pago varchar(20) [not null, note: 'CHECK: Efectivo, Tarjeta, QR']
}


// --- TABLA DE ASISTENCIA ---

Table REGISTRO_ASISTENCIA {
  id_asistencia int [pk, increment]
  id_cliente int [not null, ref: > CLIENTE.id_cliente]
  fecha_hora_ingreso datetime [not null, default: `now()`]
}


// --- TABLAS DE RUTINAS Y EJERCICIOS ---

Table EJERCICIO {
  id_ejercicio int [pk, increment]
  nombre varchar(80) [unique, not null]
  grupo_muscular varchar(50) [not null]
}

Table RUTINA {
  id_rutina int [pk, increment]
  nombre_rutina varchar(100) [not null]
  id_cliente int [not null, ref: > CLIENTE.id_cliente]
  id_entrenador int [not null, ref: > ENTRENADOR.id_entrenador]
  fecha_creacion date [not null, default: `now()`]
}

Table DETALLE_RUTINA {
  id_rutina int [not null, ref: > RUTINA.id_rutina]
  id_ejercicio int [not null, ref: > EJERCICIO.id_ejercicio]
  series int [not null, note: 'CHECK: > 0']
  repeticiones int [not null, note: 'CHECK: > 0']
  descanso_segundos int

  indexes {
    (id_rutina, id_ejercicio) [pk, note: 'Clave primaria compuesta (M:N)']
  }
}
